# jira_estimator

./: .dockerignore  .gitignore  Dockerfile  README.md  analyze_errors.py  app.py  compute_baseline.py  config.py  dataset.py  demo.py  estimate_model.py  estimate_train.py  extract_embeddings.py  feature_engineering.py  feedback.py  get_jira_issues.py  load_catboost_data.py  load_data.py  load_estimate_data.py  load_risk_data.py  model.py  pipeline.ipynb  prepare_data.py  pyproject.toml  requirements-inference.txt  requirements.txt  retrain.py  risk_model.py  routes.py  ruff.toml  split_data.py  state.py  train.py  train_catboost_estimate.py  train_catboost_risk.py
.github/workflows/: ci.yml
data/: seed.csv  train.csv
notebooks/: pipeline.ipynb
scripts/: analyze_errors.py  compute_baseline.py  extract_bm25_lsa.py  get_jira_issues.py  prepare_data.py  retrain.py  seed_model_runs.py  seed_synthetic_feedback.py  split_data.py  train_catboost_estimate.py  train_catboost_risk.py
tests/: test_feature_engineering.py  test_feedback.py  test_routes.py
