[project]
name = "jiraestimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.9.0",
    "mlflow==2.13.0",
    "pytest==8.2.2",
    "setuptools<75",
    "streamlit==1.35.0",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "ruff==0.4.7",
]
